<resources>
    <string name="app_name">StudyMate</string>

    <!--splash, login, signup screens strings-->
    <string name="login_nameLabel">Username</string>
    <string name="login_passLabel">Password</string>
    <string name="login_buttonText">Log In</string>
    <string name="signup_text">Or Sign Up</string>
    <string name="email_text">Email</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_text">Or Log In</string>


    <!--for drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_quizes">Quizes</string>
    <string name="nav_attempted">Attemted Quizes</string>
    <string name="nav_study">Study Sessions</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_logout">Logout</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Quizes</item>
        <item>Notes</item>
        <item>Tasks</item>
    </string-array>
    <!--Note list avtivity/screen-->
    <string name="groupTitle">Group</string>
    <string name="ask_join">Ask to Join</string>

    <!--card-->
    <string name="quizes_text">Quizes</string>
    <string name="members_text">Members</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--home screen-->
    <string name="all_scores">All Scores</string>
    <string name="all_notes">Notes</string>
    <string name="all_quiz">Quizes</string>
    <string name="tasks">Tasks for today</string>
    <string name="special_tasks">Special Tasks for today</string>

    <!--menu items-->
    <string name="menu_not_completed">Not Completed</string>
    <string name="menu_completed">Completed</string>

    <!--note card strings-->
    <string name="paragraph_text">Paragraph</string>

    <!--quiz card strings-->
    <string name="question_text">Question</string>
    <string name="quiz_tag">Tag: </string>
    <string name="quiz_type">Type: </string>
    <string name="quiz_time_taken">Taken</string>
    <string name="quiz_score">Score</string>

    <!--note card strings-->
    <string name="note_tag">Tag: </string>
    <string name="notes_text">Dummy Data.</string>

    <!--task card strings-->
    <string name="priority_text">Priority</string>
    <string name="time_text">Time: </string>
    <!--for ide preview tool-->
    <string name="task_title_text">Read JS book</string>

    <!--add note activity-->
    <string name="new_note_bt">Create Note</string>
    <string name="note_title_text">Title</string>
    <string name="note_tag_text">Tag</string>
    <string name="note_para_text">Paragraph 1</string>
    <string name="note_para2_text">Paragraph 2</string>
    <string name="add_new_text">Add one more paragraph</string>
    <string name="view_note_tag">Tag</string>
    <string name="paragraph_one">Paragraph One</string>
    <string name="paragraph_two">Paragraph Two</string>
    <string name="paragraph_one_view">Paragraph One</string>
    <string name="paragraph_two_view">Paragraph Two</string>

    <!--update note activity-->
    <string name="update_task_bt">Update Task</string>
    <string name="update_note_bt">Update</string>
    <string name="update_note_para_text">Update Paragraph 1</string>
    <string name="update_note_para2_text">Update Paragraph 2</string>
    <string name="update_note_tag_text">Update Note Tag</string>
    <string name="update_note_title_text">Update Note Title</string>

    <!--add task activity-->
    <string name="add_task_bt">Add Task</string>
    <string name="descr_text">Description</string>
    <string name="task_text">Title</string>
    <string name="priority_no_text">Priority Number</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="priority_no">Priority No</string>
    <string name="time_period">Time Period</string>
    <string name="no_description_added">No description added</string>
    <string name="descripton_view">Descripton</string>

    <!--add quiz-->
    <string name="quiz_title_text">Title</string>
    <string name="quiz_add_type">Quiz Type</string>
    <string name="quiz_add_tag">Quiz Tag</string>
    <string name="no_questions">No. Of Questions</string>
    <string name="new_quiz_bt">Next</string>
    <string name="clear_quiz_bt">Clear</string>
    <string name="add_quiz_text">Add Quiz</string>
    <string name="update_quiz_text">Update Quiz</string>
    <string name="addbtimg">addBTImg</string>
    <string name="question_1_qna">Question 1:</string>
    <string name="question_2_qna">Question 2:</string>
    <string name="question_et">Question</string>
    <string name="correct_answers_qna">Correct Answers</string>
    <string name="radio_true">True</string>
    <string name="radio_false">False</string>
    <string name="all_scores_tv">All Scores: 23</string>
    <string name="quiz_scoore">Quiz Scores: 2/2</string>
    <string name="check_answers_bt">Check Answers</string>
    <string name="related_quiz_bt">Related Quiz</string>
    <string name="home_bt_scoreboard">Home</string>
    <string name="txt_count_hardcode">2</string>
    <string name="delete_quiz_text">Delete Quiz</string>
    <string name="from_time_session_card">From</string>
    <string name="default_start_time_session">10:00 AM</string>
    <string name="end_time_session">To</string>
    <string name="session_end_dumy_time">12:00 PM</string>
    <string name="session_title_label">Title</string>
    <string-array name="quiz_type_spinner_items">
        <item>Single Answer</item>
        <item>Multiple Answer</item>
        <item>True or False</item>
    </string-array>


    <!--study session function strings-->
    <string-array name="study_session_list_items">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
