<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    tools:context=".activity.UpdateTaskActivity">

    <LinearLayout
        android:id="@+id/idUpdatePriorityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginTop="@dimen/margin_end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/priorityUpdateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_end"
            android:text="@string/priority_no_text"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/idUpdatePriorityET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_end"
            android:ems="10"
            android:hint="@string/priority_text"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/priorityUpdateTV" />
    </LinearLayout>

    <EditText
        android:id="@+id/taskTitleUpdateET"
        android:layout_width="@dimen/add_task_title_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginTop="@dimen/margin_top"
        android:ems="10"
        android:hint="@string/task_text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idUpdatePriorityLayout" />

    <EditText
        android:id="@+id/endTimeUpdateET"
        android:layout_width="@dimen/task_add_end_time_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_end"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginTop="@dimen/task_add_end_time_margin_top"
        android:ems="10"
        android:hint="@string/end_time"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@id/descriptionET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitleUpdateET"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/startTimeUpdateET"
        android:layout_width="@dimen/task_add_start_time_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/update_task_layout_margin"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginTop="@dimen/task_add_end_time_margin_top"
        android:ems="10"
        android:hint="@string/start_time"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@id/endTimeUpdateET"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitleUpdateET" />

    <EditText
        android:id="@+id/descriptionUpdateET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginTop="@dimen/task_add_desc_margin_top"
        android:ems="10"
        android:hint="@string/descr_text"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:minHeight="@dimen/minHeight_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimeUpdateET" />

    <Button
        android:id="@+id/updateTaskBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_end"
        android:layout_marginTop="@dimen/margin_end"
        android:text="@string/update_task_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionUpdateET"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>