<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNoteActivity"
    android:layout_margin="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/noteTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/note_title_margin_end"
            android:layout_marginStart="@dimen/note_title_margin_end"
            android:layout_marginTop="@dimen/add_note_title_margin_top"
            android:ems="10"
            android:hint="@string/note_title_text"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteTagET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/note_title_margin_end"
            android:layout_marginStart="@dimen/note_title_margin_end"
            android:layout_marginTop="@dimen/add_note_title_margin_top"
            android:ems="10"
            android:hint="@string/note_tag_text"
            android:inputType="text"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTitleET" />

        <EditText
            android:id="@+id/noteParagraphOneET"
            android:layout_width="match_parent"
            android:minHeight="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/note_title_margin_end"
            android:layout_marginStart="@dimen/note_title_margin_end"
            android:layout_marginTop="@dimen/add_note_title_margin_top"
            android:ems="10"
            android:hint="@string/note_para_text"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTagET" />

        <EditText
            android:id="@+id/noteParagraphTwoET"
            android:layout_width="match_parent"
            android:minHeight="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/note_title_margin_end"
            android:layout_marginStart="@dimen/note_title_margin_end"
            android:layout_marginTop="@dimen/add_note_title_margin_top"
            android:ems="10"
            android:hint="@string/note_para2_text"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteParagraphOneET" />

        <Button
            android:id="@+id/idNoteCreateBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="@dimen/note_title_margin_end"
            android:layout_marginStart="@dimen/note_title_margin_end"
            android:layout_marginTop="@dimen/note_title_margin_end"
            android:text="@string/new_note_bt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteParagraphTwoET"
            app:layout_constraintVertical_bias="0.888" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>